--- a/assets/style.css
+++ b/assets/style.css
@@ -49,24 +49,23 @@ p {
   justify-content: center;
   align-items: center;
   height: 100%;
-  background-color: rosybrown;
 }
 
 .ap-container {
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
-  width: 100%;
-  height: 85%;
-  background-color: #E54F6D
+  width: 1000px;
+  height: 1000px;
+  background-color: blue;
 }
 
 .square{
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: calc(100% / 8);
-  height: calc(100% / 8);
+  justify-content: center;
+  width: 150px;
+  height: 150px;
   border: 2px solid white;
 }
 
