--- a/assets/style.css
+++ b/assets/style.css
@@ -52,9 +52,8 @@ p {
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
-  width: 1000px;
-  height: 1000px;
-  background-color: blue;
+  width: 90%;
+  height: 65%;
 }
 
 .square{
